// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flatten > common 1`] = `
[
  {
    "handler": [Function],
    "patterns": [
      "//example.com",
    ],
  },
]
`;

exports[`flatten > disable fragment 1`] = `
[
  {
    "handler": [Function],
    "patterns": [
      "//example.com",
    ],
  },
]
`;

exports[`flatten > disable fragment 2`] = `[]`;

exports[`flatten > multiple handlers 1`] = `
[
  {
    "handler": [Function],
    "patterns": [
      "//example.com",
    ],
  },
  {
    "handler": [Function],
    "patterns": [
      "//example.com",
    ],
  },
]
`;

exports[`flatten > with child routes 1`] = `
[
  {
    "handler": [Function],
    "patterns": [
      "//example.com",
      "//demo.com",
    ],
  },
  {
    "handler": [Function],
    "patterns": [
      "//example.com/not-found",
      "//demo.com/not-found",
    ],
  },
]
`;
